--- a/style.css
+++ b/style.css
@@ -30,11 +30,11 @@ p{
 	background: rgba(0,0,0,0.0);
 	display: block;
 	position: absolute;
-	width: 800px;
+	width: 600px;
 	height: 280px;
 	top: 50%;
 	left: 50%;
-	margin: -160px 0 0 -400px;
+	margin: -160px 0 0 -300px;
 }
 #coming-soon h1{
 	text-align: center;
@@ -43,16 +43,19 @@ p{
 #coming-soon p{
 	text-align: center;
 }
-
 #arecibo{
 	background: url(message.png);
 	display: block;
 	position: absolute;
-	height: 280px;
-	width: 180px;
-	background-size: 180px 280px;
+	height: 260px;
+	width: 160px;
+	background-size: 160px 260px;
 	top: 50%;
 	left: 50%;
 	margin: -60px 0 0 -90px;
 	background-repeat: no-repeat;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	border: solid 10px #bbb;
 }
