--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
+@charset "UTF-8";
 html {
   position: relative;
   min-height: 100%;
 }
 body {
   color: #e9e2ee;
-  font-size: 14px;
+  font-size: 0.9em;
   font-family: sans-serif;
-  line-height: 20px;
+  line-height: 1.4em;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
   background: #55575c url(bg.jpg);
   -webkit-box-shadow: inset 0 0 300px rgba(0, 0, 0, 0.5);
@@ -31,34 +32,33 @@ p {
   background: rgba(0, 0, 0, 0.0);
   display: block;
   position: absolute;
-  width: 600px;
-  height: 280px;
+  width: 42em;
   top: 50%;
   left: 50%;
+  _margin: -11em 0 0 -21em;
   margin: -160px 0 0 -300px;
 }
 #coming-soon h1 {
   text-align: center;
-  font-size: 35px;
+  font-size: 2.4em;
 }
 #coming-soon p {
   text-align: center;
 }
 #arecibo {
-  background: url(message.png);
+  background: url(arecibo.gif);
   display: block;
   position: absolute;
-  height: 260px;
-  width: 160px;
-  background-size: 160px 260px;
+  height: 18.75em;
+  width: 6.25em;
   top: 50%;
   left: 50%;
-  margin: -60px 0 0 -90px;
+  margin: -60px 0 0 -50px;
   background-repeat: no-repeat;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-  border: solid 10px #bbb;
+  border: solid 10px #ddd;
 }
 footer {
   background: #666;
