--- a/style.css
+++ b/style.css
@@ -10,11 +10,7 @@ body {
   line-height: 1.4em;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
   background: #55575c url(bg.jpg);
-  -webkit-box-shadow: inset 0 0 300px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: inset 0 0 300px rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0 0 300px rgba(0, 0, 0, 0.5);
-  margin: 0 0 30px;
-  /* bottom = footer height */
+  margin: 0;
 }
 a, a:link, a:visited {
   color: #c6eaf7;
@@ -30,13 +26,10 @@ p {
 }
 #coming-soon {
   background: rgba(0, 0, 0, 0.0);
-  display: block;
+  height: auto;
+  margin: auto;
   position: absolute;
-  width: 42em;
-  top: 50%;
-  left: 50%;
-  _margin: -11em 0 0 -21em;
-  margin: -160px 0 0 -300px;
+  top: 20%; left: 0; bottom: 0; right: 0;
 }
 #coming-soon h1 {
   text-align: center;
@@ -46,19 +39,16 @@ p {
   text-align: center;
 }
 #arecibo {
-  background: url(arecibo.gif);
-  display: block;
-  position: absolute;
-  height: 18.75em;
-  width: 6.25em;
-  top: 50%;
-  left: 50%;
-  margin: -60px 0 0 -50px;
+  background: url(arecibo.svg);
+  height: 270px;
+  width: 90px;
+  background-size: 90px 270px;
   background-repeat: no-repeat;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
   border: solid 10px #ddd;
+  margin: auto;
 }
 footer {
   background: #666;
