--- a/style.css
+++ b/style.css
@@ -1,63 +1,43 @@
 @charset "UTF-8";
-html {
-  position: relative;
-  min-height: 100%;
-}
+/* Logo colors: dark #365f92; light: a7b7c9 */
+
+html,
 body {
-  color: #e9e2ee;
-  font-size: 0.9em;
-  font-family: sans-serif;
-  line-height: 1.4em;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
-  background: #55575c url(bg.jpg);
-  margin: 0;
+   margin:0;
+   padding:0;
+   color: #e9e2ee;
+   font-size: 0.9em;
+   font-family: sans-serif;
+   line-height: 1.4em;
+   text-shadow: 3px 5px 2px rgba(0, 0, 0, 0.75);
+   background: #55575c url(bg.jpg);
 }
+
 a, a:link, a:visited {
   color: #c6eaf7;
   font-weight: bold;
   text-decoration: none;
 }
+
 a:active, a:hover {
   color: #d8f3fd;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75), 0 0 5px rgba(198, 234, 247, 0.4);
 }
-p {
-  margin-bottom: 0.3em;
-}
-#coming-soon {
-  background: rgba(0, 0, 0, 0.0);
-  height: auto;
-  margin: auto;
-  position: absolute;
-  top: 20%; left: 0; bottom: 0; right: 0;
-}
-#coming-soon h1 {
-  text-align: center;
-  font-size: 2.4em;
-}
-#coming-soon p {
-  text-align: center;
-}
-#arecibo {
-  background: url(arecibo.svg);
-  height: 270px;
-  width: 90px;
-  background-size: 90px 270px;
-  background-repeat: no-repeat;
+
+.border {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-  border: solid 10px #ddd;
+  border: solid 10px;
   margin: auto;
 }
-footer {
-  background: #666;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  padding: 5px;
-  width: 100%;
+
+#arecibo {
+  height: 270px;
+  width: 90px;
+  border-color: #ddd;
 }
+
 #logo {
   height: 30px;
   width: 90px;
@@ -65,9 +45,34 @@ footer {
   background-size: 90px 30px;
   background-repeat: no-repeat;
   background-color: #fff;
+  border-color: #fff;
+}
+
+#container {
+  text-align: center;
+  margin: auto;
+  width: 320px;
+  height: 500px;
+  position: absolute;
+  top: 0; bottom: 0; right: 0; left: 0;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-  border: solid 10px #fff;
-  margin: auto;
+  border: solid 2px #fff;
+}
+
+#body {
+   padding: 30px;
+   -webkit-border-radius: 10px 10px 0 0;
+   -moz-border-radius: 10px 10px 0 0;
+   border-radius: 10px 10px 0 0;
+}
+
+#footer {
+  padding: 10px;
+  background-color: #55575c;
+  -webkit-border-radius: 0 0 10px 10px;
+  -moz-border-radius: 0 0 10px 10px;
+  border-radius: 0 0 10px 10px;
+  border-top: #fff solid 1px;
 }
